fixes more navbar issues on small screens

--- a/components/Header/header.module.scss
+++ b/components/Header/header.module.scss
@@ -14,7 +14,10 @@ $pulse-secondary-color: #a991d4;
   position: relative;
   cursor: pointer;
   border: 1px solid transparent;
-  padding: 0px;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 
   span {
     position: absolute;
@@ -57,8 +60,12 @@ $pulse-secondary-color: #a991d4;
     span {
       left: 20px;
     }
+    padding-left: 0;
+    padding-right: 0;
+    padding-top: 8px;
+    padding-bottom: 8px;
   }
   .toggler {
-    padding: 10px;
+    padding: 0.5rem 1rem !important;
   }
 }
